[package]
name = "e-probe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
eframe = "0.29.0"
egui = "0.29.0"
egui_file = "0.19.0"
goblin = "0.9.2"
probe-rs = { git = "https://github.com/probe-rs/probe-rs.git" }

[profile.dev]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
opt-level = 0
incremental = false

[profile.release]
codegen-units = 1   # better optimizations
lto = true          # better optimizations
strip = true
opt-level = 3
incremental = false
